# ollama-vs-llamaedge

./: .gitignore  Cargo.toml  README.md  justfile
ollama/: Modelfile
src/: dto.rs  main.rs
