[package]
name = "llamaedge-vs-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
goose = "0.18.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-openai = "0.20.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
